@@ -253,8 +253,10 @@ class Ingo_Script_Imap extends Ingo_Script_Base
                             continue;
                         }
 
+                        $mbox = new Horde_Imap_Client_Mailbox($rule['action-value']);
+
                         /* Move the messages to the requested mailbox. */
-                        $api->moveMessages($indices, $rule['action-value']);
+                        $api->moveMessages($indices, strval($mbox));
 
                         /* Display notification message(s). */
                         if ($this->_params['show_filter_msg']) {
@@ -264,13 +266,13 @@ class Ingo_Script_Imap extends Ingo_Script_Base
                                     sprintf(_("Filter activity: The message \"%s\" from \"%s\" has been moved to the folder \"%s\"."),
                                             !empty($envelope->subject) ? Horde_Mime::decode($envelope->subject) : _("[No Subject]"),
                                             !empty($envelope->from) ? strval($envelope->from) : _("[No Sender]"),
-                                            Horde_String::convertCharset($rule['action-value'], 'UTF7-IMAP', 'UTF-8')),
+                                            $mbox),
                                     'horde.message');
                             }
                         } else {
                             $notification->push(sprintf(_("Filter activity: %s message(s) have been moved to the folder \"%s\"."),
                                                         count($indices),
-                                                        Horde_String::convertCharset($rule['action-value'], 'UTF7-IMAP', 'UTF-8')), 'horde.message');
+                                                        $mbox), 'horde.message');
                         }
                     } elseif ($rule['action'] == Ingo_Storage::ACTION_DISCARD) {
                         /* We need to grab the envelope first. */
@@ -296,9 +298,10 @@ class Ingo_Script_Imap extends Ingo_Script_Base
                             $notification->push(sprintf(_("Filter activity: %s message(s) have been deleted."), count($indices)), 'horde.message');
                         }
                     } elseif ($rule['action'] == Ingo_Storage::ACTION_MOVEKEEP) {
+                        $mbox = new Horde_Imap_Client_Mailbox($rule['action-value']);
+
                         /* Copy the messages to the requested mailbox. */
-                        $api->copyMessages($indices,
-                                                  $rule['action-value']);
+                        $api->copyMessages($indices, strval($mbox));
 
                         /* Display notification message(s). */
                         if ($this->_params['show_filter_msg']) {
@@ -311,11 +314,11 @@ class Ingo_Script_Imap extends Ingo_Script_Base
                                     sprintf(_("Filter activity: The message \"%s\" from \"%s\" has been copied to the folder \"%s\"."),
                                             !empty($envelope->subject) ? Horde_Mime::decode($envelope->subject) : _("[No Subject]"),
                                             !empty($envelope->from) ? strval($envelope->from) : _("[No Sender]"),
-                                            Horde_String::convertCharset($rule['action-value'], 'UTF7-IMAP', 'UTF-8')),
+                                            $mbox),
                                     'horde.message');
                             }
                         } else {
-                            $notification->push(sprintf(_("Filter activity: %s message(s) have been copied to the folder \"%s\"."), count($indices), Horde_String::convertCharset($rule['action-value'], 'UTF7-IMAP', 'UTF-8')), 'horde.message');
+                            $notification->push(sprintf(_("Filter activity: %s message(s) have been copied to the folder \"%s\"."), count($indices), $mbox), 'horde.message');
                         }
                     }
                 }
