@@ -18,6 +18,8 @@ v3.0.4-git
 
 [mms] SECURITY: Fix XSS vulnerability on smartmobile rule page (João Machado
       <geral@jpaulo.eu>).
+[mms] Fix copy/move actions when destination mailbox contains non ASCII
+      characters (Bug #12217).
 [mms] Translate rule descriptions to the local language in UI.
 [jan] Allow multiple addresses for Sieve redirects (it@wenn.com, Request
       #11457).
